--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pay your Order</title>
-    <script src="https://test-pyxisapi.csipay.com/js/v1/csi_pay.js"></script>
+    <script src="https://staging-pyxisapi.csipay.com/js/v1/csi_pay.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
@@ -111,7 +111,7 @@
             <h2>
                 <a href="https://csipay-pyxis.readme.io/reference/testing-api-calls" class="test-cards-link">TEST CARDS</a>
             </h2>
-            <p class="order-total">Your Order total is: <strong th:text="${amount}"></strong></p>
+            <p class="order-total">Your Order total is: <strong th:text="${totalAmount}"></strong></p>
         </div>
 
         <form id="myForm" action="your_form_url" method="post" class="payment-form">
